--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,8 @@ spring:
         jdbc:
           batch_size: 1000
         order_inserts: true
+es:
+  nodes:
+    - search.shutu516.com:80
+  username: elastic
+  password: only4play
