--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,21 @@
       <artifactId>op-commons</artifactId>
       <version>3.0.2-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.only4play</groupId>
+      <artifactId>op-order-commons</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+    </dependency>
+    <!-- 审计 -->
+    <dependency>
+      <groupId>org.javers</groupId>
+      <artifactId>javers-core</artifactId>
+      <version>6.6.5</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
