--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,18 @@
       <artifactId>javers-core</artifactId>
       <version>6.6.5</version>
     </dependency>
+    <dependency>
+      <groupId>one.util</groupId>
+      <artifactId>streamex</artifactId>
+      <version>0.8.1</version>
+    </dependency>
+    <!-- 浏览器信息 -->
+    <dependency>
+      <groupId>eu.bitwalker</groupId>
+      <artifactId>UserAgentUtils</artifactId>
+      <version>1.21</version>
+    </dependency>
+
   </dependencies>
   <profiles>
     <profile>
